# MagicBoxBackup

./: CMakeLists.txt  Prompts.md  Readme.md  explicatione.md  main_gui.cpp  pushtogit.cpp
